Combined byte array implementation and file read/write. Refactored the Read/Write classes